--- a/style.css
+++ b/style.css
@@ -1,158 +1,28 @@
-body {
-    margin:0;
-  }
-  
-  .fullpage{  
-      background-repeat: no-repeat;
-      height: 100%;
-      padding: 3%;
-      background-size: cover;        
-  }
-  
-  ul.my-list-style {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  
-  li.list {
-    float: left;
-  }
-  
-  li.list a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li.list a:hover:not(.active) {
-    background-color: #e2e2e2;
-  }
-  
-  .nav {
-    padding:20px 0px;
-    border-radius:8px;
-  }
-  
-  .myself img {
-      display: block;    
-      margin-left: auto;
-      margin-right: auto;
-      
-  }
-  
-  .gallery {  
-    margin: 5px;  
-    border: 1px solid #ccc;
-    float: left;
-    width: 410px;
-  }
-  
-  .gallery:hover {
-    border: 1px solid #777;
-  }
-  
-  .gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .desc {
-    padding: 15px;
-    text-align: center;
-  }
-  
-  #favorite {
-    clear: both;  
-  }
-  
-  #movies {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #movies td, #movies th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #movies tr:hover {background-color: #ddd;}
-  
-  #movies th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #333;
+#inner1 {
+    background-color: rgb(162, 0, 255);
+    border: 3px solid salmon;
     color: white;
   }
-  
-  
-  .footer {  
-     float: left;      
-     left: 0;
-     bottom: 0;
-     padding: 0.1px;
-     width: 100%;
-     background-color: black;
-     color: white;
-     text-align: center;
-  }
-  
-  #id1{
-    border-style: solid;
-    margin: 20px;  
-    border-color: black;
-    background-color: white;
+  #something {
     text-align: center;
   }
-  
-  #id1 h2{
+  .bton {
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+  }
+  #red {
+    background-color: rgb(199, 56, 56);
+  }
+  #green {
+    background-color: rgb(67, 214, 67);
+  }
+  #blue {
+    background-color: rgb(91, 91, 209);
+  }
+  #orange {
+    background-color: rgb(216, 165, 70);
+  }
+  .cen {
     text-align: center;
-    color: black;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  }
-  
-  #btn1{
-    width: 30%;
-    margin: 5%;
-    border: solid;
-    border-color: blue;
-    background-color: green;
-    color: yellow;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  }
-  #btn2{ 
-    width: 30%;
-    margin: 5%;  
-    border: solid;
-    border-color: black;
-    background-color: yellow;
-    color: red;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  }
-  #btn3{
-    width: 30%;
-    margin: 5%;
-    border: solid;
-    border-color: gray;
-    background-color: black;
-    color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  }
-  #btn4{
-    width: 30%;
-    margin: 5%;
-    border: solid;
-    border-color: red;
-    background-color: pink;
-    color: black;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
